docs(java): add comprehensive Java 25 FFM Quickstart guide and update README